fix toc do doc tu db